SERVER-22247 Do not fail when parsing pre-2.2 sharding collection metadata