src/mongo/s/catalog/type_collection_test.cpp
@@ -38,6 +38,7 @@ namespace {
 
 using namespace mongo;
 
+using unittest::assertGet;
 
 TEST(CollectionType, Empty) {
     StatusWith<CollectionType> status = CollectionType::fromBSON(BSONObj());
@@ -59,6 +60,45 @@ TEST(CollectionType, Basic) {
     ASSERT_EQUALS(coll.getUpdatedAt(), Date_t::fromMillisSinceEpoch(1));
     ASSERT_EQUALS(coll.getKeyPattern().toBSON(), BSON("a" << 1));
     ASSERT_EQUALS(coll.getUnique(), true);
+    ASSERT_EQUALS(coll.getAllowBalance(), true);
+    ASSERT_EQUALS(coll.getDropped(), false);
+}
+
+TEST(CollectionType, EpochCorrectness) {
+    CollectionType coll;
+    coll.setNs(NamespaceString{"db.coll"});
+    coll.setUpdatedAt(Date_t::fromMillisSinceEpoch(1));
+    coll.setKeyPattern(KeyPattern{BSON("a" << 1)});
+    coll.setUnique(false);
+    coll.setDropped(false);
+
+    // Validation will fail because we don't have epoch set. This ensures that if we read a
+    // collection with no epoch, we will write back one with epoch.
+    ASSERT_NOT_OK(coll.validate());
+
+    // We should be allowed to set empty epoch for dropped collections
+    coll.setDropped(true);
+    coll.setEpoch(OID());
+    ASSERT_OK(coll.validate());
+
+    // We should be allowed to set normal epoch for non-dropped collections
+    coll.setDropped(false);
+    coll.setEpoch(OID::gen());
+    ASSERT_OK(coll.validate());
+}
+
+TEST(CollectionType, Pre22Format) {
+    CollectionType coll = assertGet(
+        CollectionType::fromBSON(BSON("_id"
+                                      << "db.coll"
+                                      << "lastmod" << Date_t::fromMillisSinceEpoch(1) << "dropped"
+                                      << false << "key" << BSON("a" << 1) << "unique" << false)));
+
+    ASSERT(coll.getNs() == NamespaceString{"db.coll"});
+    ASSERT(!coll.getEpoch().isSet());
+    ASSERT_EQUALS(coll.getUpdatedAt(), Date_t::fromMillisSinceEpoch(1));
+    ASSERT_EQUALS(coll.getKeyPattern().toBSON(), BSON("a" << 1));
+    ASSERT_EQUALS(coll.getUnique(), false);
     ASSERT_EQUALS(coll.getAllowBalance(), true);
     ASSERT_EQUALS(coll.getDropped(), false);
 }
